--- a/src/templates/items/item-sheet.html
+++ b/src/templates/items/item-sheet.html
@@ -20,51 +20,66 @@
   <section class="sheet-body">
     <div class="tab" data-group="primary" data-tab="description">
 
-    <div class="flexrow">
-      <div class="stats">
-        <div class="form-group">
-          <label>{{localize 'ACKS.items.subtype'}}</label>
-          <div class="form-fields">
-            <select name="system.subtype" value="{{system.subtype}}" data-dtype="String">
-              {{selectOptions config.item_subtypes selected=system.subtype localize=true}}  
-            </select>
+      <div class="flexrow">
+        <div class="stats">
+          <div class="form-group">
+            <label>{{localize 'ACKS.items.subtype'}}</label>
+            <div class="form-fields">
+              <select name="system.subtype" value="{{system.subtype}}" data-dtype="String">
+                {{selectOptions config.item_subtypes selected=system.subtype localize=true}}
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label>{{localize 'ACKS.items.quantity'}}</label>
-          <div class="form-fields">
-            <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" data-dtype="Number" />/<input type="text" name="system.quantity.max" value="{{system.quantity.max}}" data-dtype="Number" />
+
+          {{#if (eq system.subtype "clothing")}}
+          <div class="form-group">
+            <label>{{localize 'ACKS.items.Cost'}}</label>
+            <div class="form-fields">
+              <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number" />
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label>{{localize 'ACKS.items.Treasure'}}</label>
-          <div class="form-fields">
-            <input type="checkbox" name="system.treasure" value="{{system.treasure}}" {{checked system.treasure}}  data-dtype="Boolean"/>
+
+          {{else}}
+          <div class="form-group">
+            <label>{{localize 'ACKS.items.quantity'}}</label>
+            <div class="form-fields">
+              <input type="text" name="system.quantity.value" value="{{system.quantity.value}}"
+                data-dtype="Number" />/<input type="text" name="system.quantity.max" value="{{system.quantity.max}}"
+                data-dtype="Number" />
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label>{{localize 'ACKS.items.Cost'}}</label>
-          <div class="form-fields">
-            <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number" />
+          <div class="form-group">
+            <label>{{localize 'ACKS.items.Treasure'}}</label>
+            <div class="form-fields">
+              <input type="checkbox" name="system.treasure" value="{{system.treasure}}" {{checked system.treasure}}
+                data-dtype="Boolean" />
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label>{{localize 'ACKS.items.Weight'}}</label>
-          <div class="form-fields">
-            <input type="text" name="system.weight6" value="{{system.weight6}}" data-dtype="Number" />
+          <div class="form-group">
+            <label>{{localize 'ACKS.items.Cost'}}</label>
+            <div class="form-fields">
+              <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number" />
+            </div>
           </div>
+          <div class="form-group">
+            <label>{{localize 'ACKS.items.Weight'}}</label>
+            <div class="form-fields">
+              <input type="text" name="system.weight6" value="{{system.weight6}}" data-dtype="Number" />
+            </div>
+          </div>
+          {{/if}}
         </div>
-      </div>      
-      <div class="description weapon-editor">
-        {{editor description target="system.description" button=true
-        owner=owner editable=editable}}
+
+        <div class="description weapon-editor">
+          {{editor description target="system.description" button=true
+          owner=owner editable=editable}}
+        </div>
       </div>
-    </div>
     </div>
     <div class="tab" data-group="primary" data-tab="effects">
       {{> "systems/acks/templates/items/partials/item-generic-effects-tab.html"}}
     </div>
 
-    
+
   </section>
 </form>
