tampering mortality fix
added Middle aged option to Tampering with Mortality dialogue

--- a/src/templates/apps/tampering-mortality-dialog.html
+++ b/src/templates/apps/tampering-mortality-dialog.html
@@ -11,7 +11,7 @@
     <div class="flexrow">
       <span>Span of Creature's Life</span>
       <select name="creatureLife" class="creature-life">
-        {{selectOptions spanChoices selected=creatureLife valueKey="value" labelKey="label"}}
+        {{selectOptions spanChoices selected=creatureLife valueAttr="value" labelAttr="label"}}
       </select>
     </div>
 
