Sheet height fix
Fixed height for character's inventory, spell, ability and hireling tabs, monster's attributes tab

--- a/src/templates/actors/partials/character-hirelings-tab.html
+++ b/src/templates/actors/partials/character-hirelings-tab.html
@@ -1,4 +1,4 @@
-<section class="wages-section" data-base-size="32">
+<section class="wages-section">
   <div class="flexrow">
     <div class="item-name wage-text-center">{{localize 'ACKS.totalWages'}} : {{totalWages}} gp</div>
     <div class="item-name wage-text-center">{{localize 'ACKS.availableMoney'}} : {{totalMoneyGC}} gp</div>
@@ -6,7 +6,7 @@
   </div>
 </section>
 
-<section class="inventory resizable" data-base-size="310">
+<section class="inventory resizable" data-base-size="349">
   <div>
     <div class="item-titles flexrow">
       <div class="item-caret"><i class="fas fa-caret-down"></i></div>
@@ -33,7 +33,7 @@
           <div class="item-name flexrow" >
             <div class="item-image" style="background-image: url({{henchman.img}})"></div>
             <a class="open-henchman" data-henchman-id="{{henchman._id}}">
-              <h4>{{henchman.name~}}</h4>          
+              <h4>{{henchman.name~}}</h4>
             </a>
           </div>
           <div class="field-short">
