--- a/src/templates/items/v2/details/details-ability.hbs
+++ b/src/templates/items/v2/details/details-ability.hbs
@@ -1,15 +1,15 @@
-<div class="stats">
+<div class="field-set field-set--narrow">
 
   <div class="form-group">
-    <label>{{localize 'ACKS.abilities.Requirements'}}</label>
-    <div class="form-fields">
+    <label class="form-group__label">{{localize 'ACKS.abilities.Requirements'}}</label>
+    <div class="form-group__fields">
       <input type="text" name="system.requirements" value="{{system.requirements}}" data-dtype="String"/>
     </div>
   </div>
 
   <div class="form-group">
-    <label>{{localize 'ACKS.items.proficiencyType'}}</label>
-    <div class="form-fields">
+    <label class="form-group__label">{{localize 'ACKS.items.proficiencyType'}}</label>
+    <div class="form-group__fields">
       <select name="system.proficiencytype">
         {{selectOptions config.proficiencyType localize=true selected=system.proficiencytype}}
       </select>
@@ -17,39 +17,39 @@
   </div>
 
   <div class="form-group">
-    <label>{{localize 'ACKS.items.Roll'}}</label>
-    <div class="form-fields">
+    <label class="form-group__label">{{localize 'ACKS.items.Roll'}}</label>
+    <div class="form-group__fields">
       <input type="text" name="system.roll" value="{{system.roll}}" data-dtype="String"/>
     </div>
   </div>
 
-  <div class="form-group form-group-row">
-    <label>{{localize 'ACKS.items.RollType'}}</label>
-    <div class="form-fields">
+  <div class="form-group form-group--row">
+    <label class="form-group__label">{{localize 'ACKS.items.RollType'}}</label>
+    <div class="form-group__fields">
       <select name="system.rollType">
         {{selectOptions config.roll_type selected=system.rollType}}
       </select>
     </div>
   </div>
 
-  <div class="form-group form-group-row">
-    <label>{{localize 'ACKS.items.RollTarget'}}</label>
-    <div class="form-fields">
+  <div class="form-group form-group--row">
+    <label class="form-group__label">{{localize 'ACKS.items.RollTarget'}}</label>
+    <div class="form-group__fields">
       <input type="text" name="system.rollTarget" value="{{system.rollTarget}}" data-dtype="Number"/>
     </div>
   </div>
 
-  <div class="form-group form-group-row">
-    <label>{{localize 'ACKS.items.BlindRoll'}}</label>
-    <div class="form-fields">
+  <div class="form-group form-group--row">
+    <label class="form-group__label">{{localize 'ACKS.items.BlindRoll'}}</label>
+    <div class="form-group__fields">
       <input type="checkbox" name="system.blindroll" value="{{system.blindroll}}" {{checked system.blindroll}}
              data-dtype="Boolean"/>
     </div>
   </div>
 
   <div class="form-group">
-    <label>{{localize 'ACKS.spells.Save'}}</label>
-    <div class="form-fields">
+    <label class="form-group__label">{{localize 'ACKS.spells.Save'}}</label>
+    <div class="form-group__fields">
       <select name="system.save">
         <option value=""></option>
         {{selectOptions config.saves_short selected=system.save}}
@@ -57,9 +57,9 @@
     </div>
   </div>
 
-  <div class="form-group form-group-row">
-    <label>{{localize 'ACKS.favorite'}}</label>
-    <div class="form-fields">
+  <div class="form-group form-group--row">
+    <label class="form-group__label">{{localize 'ACKS.favorite'}}</label>
+    <div class="form-group__fields">
       <input type="checkbox" name="system.favorite" value="{{system.favorite}}" {{checked system.favorite}}
              data-dtype="Boolean"/>
     </div>
