--- a/src/templates/items/v2/details/details-armor.hbs
+++ b/src/templates/items/v2/details/details-armor.hbs
@@ -1,31 +1,19 @@
-<div class="stats">
-  <div class="form-group">
-    <label>{{localize 'ACKS.items.ArmorAAC'}}</label>
-    <div class="form-fields">
+<div class="field-set field-set--narrow">
+
+  <div class="form-group form-group--row">
+    <label class="form-group__label">{{localize 'ACKS.items.ArmorAAC'}}</label>
+    <div class="form-group__fields">
       <input type="text" name="system.aac.value" value="{{system.aac.value}}" data-dtype="Number"/>
     </div>
   </div>
 
   <div class="form-group">
-    <label>{{localize 'ACKS.armor.type'}}</label>
-    <div class="form-fields">
+    <label class="form-group__label">{{localize 'ACKS.armor.type'}}</label>
+    <div class="form-group__fields">
       <select name="system.type">
         {{selectOptions config.armor selected=system.type}}
       </select>
     </div>
   </div>
 
-  <div class="form-group">
-    <label>{{localize 'ACKS.items.Cost'}}</label>
-    <div class="form-fields">
-      <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label>{{localize 'ACKS.items.Weight'}}</label>
-    <div class="form-fields">
-      <input type="text" name="system.weight6" value="{{system.weight6}}" data-dtype="Number"/>
-    </div>
-  </div>
 </div>
