--- a/src/templates/actors/dialogs/tweaks-dialog.html
+++ b/src/templates/actors/dialogs/tweaks-dialog.html
@@ -67,13 +67,7 @@
   <div class="form-group">
     <label>{{localize "ACKS.ArmorClassBonus"}}</label>
     <div class="form-fields">
-      {{#if config.ascendingAC}}
-      <input type="text" name="system.aac.mod" id="aac" value="{{system.aac.mod}}"
-        data-dtype="Number" />
-      {{else}}
-      <input type="text" name="system.ac.mod" id="ac" value="{{system.ac.mod}}"
-        data-dtype="Number" />
-        {{/if}}
+      <input type="text" name="system.aac.mod" id="aac" value="{{system.aac.mod}}" data-dtype="Number" />
     </div>
   </div>
   <div class="form-group">
