--- a/src/templates/actors/partials/character-attributes-tab.html
+++ b/src/templates/actors/partials/character-attributes-tab.html
@@ -140,20 +140,12 @@
     <div class="flexrow">
 
       <div class="health armor-class">
-        {{#if config.ascendingAC}}
         <div class="health-value health-top" title="{{localize 'ACKS.ArmorClass'}}">{{system.aac.value}}</div>
-        <div class="health-value health-bottom" title="{{localize 'ACKS.ArmorClassNaked'}}">
-          {{system.aac.naked}}</div>
-        {{#if system.aac.shield}}<div class="shield"
-          title="{{localize 'ACKS.items.hasShield'}} ({{system.aac.shield}})"><i class="fas fa-shield-alt"></i></div>
-        {{/if}}
-        {{else}}
-        <div class="health-value health-top" title="{{localize 'ACKS.ArmorClass'}}">{{system.ac.value}}</div>
-        <div class="health-value health-bottom" title="{{localize 'ACKS.ArmorClassNaked'}}">
-          {{system.ac.naked}}</div>
-        {{#if system.ac.shield}}<div class="shield" title="{{localize 'ACKS.items.hasShield'}} ({{system.ac.shield}})">
-          <i class="fas fa-shield-alt"></i>
-        </div>{{/if}}
+        <div class="health-value health-bottom" title="{{localize 'ACKS.ArmorClassNaked'}}">{{system.aac.naked}}</div>
+        {{#if system.aac.shield}}
+          <div class="shield" title="{{localize 'ACKS.items.hasShield'}} ({{system.aac.shield}})">
+            <i class="fas fa-shield-alt"></i>
+          </div>
         {{/if}}
       </div>
 
